--- a/components/circular-progress/src/vwc-circular-progress.scss
+++ b/components/circular-progress/src/vwc-circular-progress.scss
@@ -1,14 +1,13 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
 @use '@vonage/vvd-foundation/scss/variable-names/color-semantic-variable-names' as color-semantic;
-@use '@vonage/vvd-foundation/scss/mixins/color-connotation-mixins' with (
-	$connotations: primary cta success alert
+@use '@vonage/vvd-foundation/scss/mixins/color-connotation' with (
+	$connotations-set: primary cta success alert
 );
 
-@include color-connotation-mixins.connotations-context(
-	':host(#{color-connotation-mixins.$connotation-placeholder})'
-);
+@include color-connotation.connotations-shades;
+@include color-connotation.connotations-main;
+@include color-connotation.connotations-main-default(primary);
 
 :host {
-	--mdc-theme-primary: var(#{color-semantic.$vvd-color-connotation},
-	var(#{scheme-variables.$vvd-color-primary}));
+	--mdc-theme-primary: var(#{color-semantic.$vvd-color-connotation});
 }
