--- a/common/context/src/partials/_theme.scss
+++ b/common/context/src/partials/_theme.scss
@@ -1,8 +1,10 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
 @use '@vonage/vvd-foundation/scss/variable-names/color-base-variable-names' as color-base;
 @use '@vonage/vvd-foundation/scss/variable-names/color-semantic-variable-names' as color-semantic;
-@use '@vonage/vvd-foundation/scss/mixins/color-connotation-mixins' with (
-	$connotations: success alert warning info announcement
+@use '@vonage/vvd-foundation/scss/mixins/color-connotation/variables' as connotation-variables;
+@use '@vonage/vvd-foundation/scss/mixins/color-connotation' with (
+	$connotations-set: success alert warning info announcement,
+	$selector: 'blockquote#{connotation-variables.$compound-placeholder}'
 );
 @use 'variables';
 
@@ -12,10 +14,10 @@ body {
 }
 
 #{variables.$vivid-scope-selector} {
-	@include color-connotation-mixins.connotations-context(
-		'blockquote#{color-connotation-mixins.$connotation-placeholder}',
-		'info'
-	);
+
+	@include color-connotation.connotations-main;
+	@include color-connotation.connotations-main-default(info);
+
 	a {
 		color: var(
 			#{scheme-variables.$vvd-color-cta-70}
