--- a/components/datepicker/src/vwc-datepicker.scss
+++ b/components/datepicker/src/vwc-datepicker.scss
@@ -29,6 +29,11 @@ vwc-menu {
 	box-shadow: none;
 	color: var(#{scheme-variables.$vvd-color-on-base});
 
+	&::before,
+	&::after {
+		display: none;
+	}
+
 	&.open {
 		display: block;
 	}
