fix(vwc-chip): trailing icon offset fixed (#735)

--- a/components/chips/src/vwc-chip.scss
+++ b/components/chips/src/vwc-chip.scss
@@ -29,11 +29,6 @@
 		vertical-align: middle;
 	}
 
-	// vwc-icon
-	.trailing {
-		margin-top: -1px;
-	}
-
 	:host([type='filter']) & {
 		cursor: pointer;
 	}
@@ -49,6 +44,7 @@
 	}
 
 	.mdc-chip__icon--trailing {
+		display: flex;
 		cursor: pointer;
 		transition: color variables.$color-animation-duration linear;
 	}
