fix(vwc-badge): element invisibility due to wrong z-indexing (#717)
* fix(vwc-badge): element invisibility due to wrong z-indexing

Closes #31

* tests pass viv-435

* badge direct refs

* connotation shade

* badge vary from layout mixin

* add scoped layout var to badge and icon-button

* safer scoped variables

* comment

* added organized shades mixin

* connotation mixins refactored

* connotations default mixin

* linear progress updated to new connotation mixin

* icon button uses new connotation mixin

* fix icon button

* switch use of new connotation mixin

* note use of new connotation mixin

* button use of new connotation mixin

* circular progress use new connotation mixin

* remove shades

* context theme use new connotation mixin

* remove refactored connotation mixin

* remove announcement test from badge

Co-authored-by: joelgraham93 <j.r.g@hotmail.com>
Co-authored-by: Yuri Guller <gullerya@gmail.com>

--- a/components/button/src/vwc-button.scss
+++ b/components/button/src/vwc-button.scss
@@ -1,8 +1,8 @@
 @forward './vwc-button-coupling';
 @use '@vonage/vvd-foundation/scss/variable-names/color-semantic-variable-names' as color-semantic;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
-@use '@vonage/vvd-foundation/scss/mixins/color-connotation-mixins' with (
-	$connotations: primary cta success alert info announcement
+@use '@vonage/vvd-foundation/scss/mixins/color-connotation' with (
+	$connotations-set: primary cta success alert info announcement
 );
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with(
 	$variable-name: --vvd-button-shape
@@ -19,6 +19,9 @@
 	}
 }
 
+@include color-connotation.connotations-main;
+@include color-connotation.connotations-main-default(primary);
+
 :host {
 	--mdc-button-disabled-ink-color: var(#{color-semantic.$formfield-disabled-ink});
 	--mdc-button-disabled-fill-color: var(#{scheme-variables.$vvd-color-neutral-30});
@@ -26,10 +29,6 @@
 	--mdc-button-outline-color: var(--mdc-theme-primary);
 	--mdc-button-horizontal-padding: 14px;
 }
-
-@include color-connotation-mixins.connotations-context(
-	':host([unelevated]#{color-connotation-mixins.$connotation-placeholder}),:host([outlined]#{color-connotation-mixins.$connotation-placeholder})'
-);
 
 :host([unelevated]),
 :host([outlined]) {
