--- a/common/foundation/scss/mixins/_layout-mixins.scss
+++ b/common/foundation/scss/mixins/_layout-mixins.scss
@@ -17,23 +17,20 @@ $all-layouts: (
 	ghost: 'ghost',
 );
 
-$bg: var(#{color-semantic.$vvd-color-connotation});
-
 %filled {
-	#{$_prefix}background-color: #{$bg};
+	#{$_prefix}background-color: var(#{color-semantic.$vvd-color-connotation});
 	#{$_prefix}color: var(#{color-semantic.$vvd-color-on-connotation});
 }
 
 %outlined {
 	#{$_prefix}background-color: transparent;
-	#{$_prefix}border: 1px solid #{$bg};
-	#{$_prefix}color: #{$bg};
+	#{$_prefix}border: 1px solid var(#{color-semantic.$vvd-color-connotation});
+	#{$_prefix}color: var(#{color-semantic.$vvd-color-connotation});
 }
 
 %soft {
-	#{$_prefix}background-color: #{$bg};
+	#{$_prefix}background-color: var(#{color-semantic.$vvd-color-connotation}-soft);
 	#{$_prefix}color: var(#{scheme-variables.$vvd-color-on-base});
-	#{$_prefix}opaque: 20;
 }
 
 %text,
