--- a/components/badge/src/vwc-badge.scss
+++ b/components/badge/src/vwc-badge.scss
@@ -1,55 +1,54 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
 @use '@vonage/vvd-foundation/scss/variable-names/color-semantic-variable-names' as color-semantic;
-@use '@vonage/vvd-foundation/scss/mixins/color-connotation-mixins';
 @use '@vonage/vvd-typography/scss/typography';
+@use '@vonage/vvd-foundation/scss/mixins/color-connotation' with (
+	$connotations-set: primary cta success alert warning info
+);
+
+$namespace: vvd-badge;
+
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with (
-	$variable-name: --vvd-badge-shape
+	$variable-name: --#{$namespace}-shape
 );
 @use '@vonage/vvd-foundation/scss/mixins/layout-mixins' with (
 	$layouts: filled	outlined	soft,
 	$variables-scope-prefix: 'vvd-badge'
 );
 
-@include color-connotation-mixins.connotations-context(
-	':host(#{color-connotation-mixins.$connotation-placeholder})'
+$vvd-badge-block-size: --#{$namespace}-block-size;
+
+@include color-connotation.connotations-shades;
+@include color-connotation.connotations-main;
+@include color-connotation.connotations-main-default(primary);
+
+@include shape-mixins.shape(
+	$shapes: (
+		rounded: 4px,
+		pill: 14px,
+	)
 );
 
-$vvd-badge-block-size: --vvd-badge-block-size;
+@include layout-mixins.layout();
 
 :host {
 	#{$vvd-badge-block-size}: 24px;
 	@include typography.typography-cat-shorthand('caption-bold');
-	position: relative;
-	display: inline-flex;
-	height: var(#{$vvd-badge-block-size});
-	align-items: center;
+	display: inline-block;
 	padding: 0 10px;
-	block-size: var(#{$vvd-badge-block-size});
-	color: var(--vvd-badge-color);
+	border: var(--#{$namespace}-border);
+	background-color: var(--#{$namespace}-background-color);
+	border-radius: var(--#{$namespace}-shape);
+	color: var(--#{$namespace}-color);
+	line-height: var(#{$vvd-badge-block-size});
+}
 
-	&::before {
-		position: absolute;
-		z-index: -1;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-		border: var(--vvd-badge-border);
-		background-color: var(--vvd-badge-background-color);
-		border-radius: var(--vvd-badge-shape);
-		content: '';
-		inset: 0;
-		opacity: calc(var(--vvd-badge-opaque) * 0.01);
-	}
+:host([layout="outlined"i]) {
+	--color: var(#{scheme-variables.$vvd-color-on-base});
 }
 
 :host([disabled]) {
+	background-color: var(#{scheme-variables.$vvd-color-neutral-30});
 	color: var(#{scheme-variables.$vvd-color-neutral-50});
-
-	&::before {
-		--opaque: 100;
-		background-color: var(#{scheme-variables.$vvd-color-neutral-30});
-	}
 }
 
 :host([dense]) {
@@ -62,11 +61,3 @@ $vvd-badge-block-size: --vvd-badge-block-size;
 	padding: 0 12px;
 }
 
-@include shape-mixins.shape(
-	$shapes: (
-		rounded: 4px,
-		pill: 14px,
-	)
-);
-
-@include layout-mixins.layout();
