--- a/common/foundation/scss/mixins/color-connotation/_index.scss
+++ b/common/foundation/scss/mixins/color-connotation/_index.scss
@@ -1,6 +1,9 @@
 @use 'predefined-connotations';
 @use 'variables';
 
+$vvd-color-connotation: variables.$vvd-color-connotation;
+$vvd-color-on-connotation: variables.$vvd-color-on-connotation;
+
 $selector: variables.$selector !default;
 $connotations-set: predefined-connotations.$connotations-set !default;
 $connotations-decorative-set: predefined-connotations.$connotations-decorative-set !default;
