--- a/common/context/src/partials/_theme.scss
+++ b/common/context/src/partials/_theme.scss
@@ -1,8 +1,7 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
 @use '@vonage/vvd-foundation/scss/variable-names/color-base-variable-names' as color-base;
-@use '@vonage/vvd-foundation/scss/variable-names/color-semantic-variable-names' as color-semantic;
 @use '@vonage/vvd-foundation/scss/mixins/color-connotation/variables' as connotation-variables;
-@use '@vonage/vvd-foundation/scss/mixins/color-connotation' with (
+@use '@vonage/vvd-foundation/scss/mixins/color-connotation' as color-connotation with (
 	$connotations-set: success alert warning info announcement,
 	$selector: 'blockquote#{connotation-variables.$compound-placeholder}'
 );
@@ -38,7 +37,7 @@ body {
 	}
 
 	blockquote {
-		border-inline-start: 8px solid var(#{color-semantic.$vvd-color-connotation});
+		border-inline-start: 8px solid var(#{color-connotation.$vvd-color-connotation});
 		box-shadow: inset 0 1px 0 0 #b3b3b3, inset 0 -1px 0 0 #b3b3b3,
 			inset -1px 0 0 0 #b3b3b3;
 	}
