--- a/components/icon-button/src/vwc-icon-button.scss
+++ b/components/icon-button/src/vwc-icon-button.scss
@@ -1,6 +1,6 @@
-@use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
-@use '@vonage/vvd-foundation/scss/variable-names/color-semantic-variable-names' as color-semantic;
-@use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with (
+@use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
+@use '@vonage/vvd-style-coupling/src/vvd-formfield' as vvd-formfield;
+@use '@vonage/vvd-foundation/scss/mixins/shape-mixins' as shape-mixins with (
 	$variable-name: --vvd-icon-button-shape
 );
 @use '@vonage/vvd-foundation/scss/mixins/color-connotation' with (
@@ -15,8 +15,10 @@
 @include color-connotation.connotations-main-default(primary);
 
 :host {
+
 	// sizing
 	--mdc-icon-button-size: 40px;
+	@include vvd-formfield.couplings;
 
 	.mdc-icon-button {
 		display: inline-flex;
@@ -28,7 +30,7 @@
 		border-radius: var(--vvd-icon-button-shape);
 		color: var(--vvd-icon-button-color);
 		&:disabled {
-			color: var(#{color-semantic.$formfield-disabled-ink});
+			color: var(#{vvd-formfield.$formfield-disabled-ink});
 		}
 	}
 
@@ -45,7 +47,7 @@
 
 :host([layout='outlined']) {
 	.mdc-icon-button:disabled {
-		border-color: var(#{color-semantic.$formfield-disabled-ink});
+		border-color: var(#{vvd-formfield.$formfield-disabled-ink});
 	}
 }
 
