--- a/components/select/src/vwc-select.scss
+++ b/components/select/src/vwc-select.scss
@@ -1,7 +1,7 @@
 @forward './vwc-select-coupling';
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/_scheme-variables' as scheme-variables;
-@use '@vonage/vvd-foundation/scss/variable-names/color-semantic-variable-names' as color-semantic;
-@use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with (
+@use '@vonage/vvd-style-coupling/src/vvd-formfield' as vvd-formfield;
+@use '@vonage/vvd-foundation/scss/mixins/shape-mixins' as shape-mixins with (
 	//! may consider replacing with own component variable to prevent delegation
 	$variable-name: --mdc-shape-small
 );
@@ -11,12 +11,12 @@ $vvd-select-size-block: --vvd-select-size-block;
 :host {
 	--mdc-select-fill-color: var(#{scheme-variables.$vvd-color-base});
 	--mdc-select-ink-color: var(#{scheme-variables.$vvd-color-on-base});
-	--mdc-select-label-ink-color: var(#{color-semantic.$formfield-label-idle-ink});
+	--mdc-select-label-ink-color: var(#{vvd-formfield.$formfield-label-idle-ink});
 	--mdc-select-disabled-ink-color: var(
-		#{color-semantic.$formfield-disabled-ink}
+		#{vvd-formfield.$formfield-disabled-ink}
 	);
 	--mdc-select-disabled-fill-color: var(
-		#{color-semantic.$formfield-disabled-fill}
+		#{vvd-formfield.$formfield-disabled-fill}
 	);
 
 	--mdc-select-dropdown-icon-color: var(--mdc-select-ink-color);
@@ -26,17 +26,17 @@ $vvd-select-size-block: --vvd-select-size-block;
 	);
 
 	--mdc-select-outlined-idle-border-color: var(
-		#{color-semantic.$formfield-border-idle}
+		#{vvd-formfield.$formfield-border-idle}
 	);
 	--mdc-select-outlined-hover-border-color: var(
-		#{color-semantic.$formfield-border-hover}
+		#{vvd-formfield.$formfield-border-hover}
 	);
 	--mdc-select-outlined-disabled-border-color: var(
-		#{color-semantic.$formfield-border-disabled}
+		#{vvd-formfield.$formfield-border-disabled}
 	);
 
-	--mdc-select-error-color: var(#{color-semantic.$formfield-label-error-ink});
-	--mdc-select-error-fill-color: var(#{color-semantic.$formfield-error-fill});
+	--mdc-select-error-color: var(#{vvd-formfield.$formfield-label-error-ink});
+	--mdc-select-error-fill-color: var(#{vvd-formfield.$formfield-error-fill});
 	--mdc-select-error-dropdown-icon-color: var(--mdc-select-error-color);
 
 	--mdc-shape-small: var(--border-radius);
