--- a/components/textfield/src/vwc-textfield-input.scss
+++ b/components/textfield/src/vwc-textfield-input.scss
@@ -1,7 +1,7 @@
 @use './vwc-textfield-variables' as textfield-variables;
-@use '@vonage/vvd-typography/scss/typography';
-@use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
-@use '@vonage/vvd-foundation/scss/variable-names/color-semantic-variable-names' as color-semantic;
+@use '@vonage/vvd-typography/scss/typography' as typography;
+@use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
+@use '@vonage/vvd-style-coupling/src/vvd-formfield' as vvd-formfield;
 
 ::slotted(#{textfield-variables.$vvd-input-selector}) {
 	@include typography.typography-cat-shorthand('body-2');
@@ -27,7 +27,7 @@
 :host([disabled]) {
 	::slotted(#{textfield-variables.$vvd-input-selector}),
 	::slotted(#{textfield-variables.$vvd-input-selector})::placeholder {
-		color: var(#{color-semantic.$formfield-disabled-ink});
+		color: var(#{vvd-formfield.$formfield-disabled-ink});
 	}
 }
 
