--- a/components/file-picker/src/vwc-file-picker.scss
+++ b/components/file-picker/src/vwc-file-picker.scss
@@ -3,6 +3,8 @@
 @use '@vonage/vvd-typography/scss/typography' as typography;
 
 :host {
+	@include vvd-formfield.couplings;
+
 	display: inline-block;
 	max-inline-size: 100%;
 	min-inline-size: 320px;
@@ -74,7 +76,7 @@
 	}
 }
 
-:host([drop-zone='false']) { 
+:host([drop-zone='false']) {
 	display: inline-flex;
 
 	.content {
