issue #744: fixed icon button and tested

--- a/components/icon-button/src/vwc-icon-button.scss
+++ b/components/icon-button/src/vwc-icon-button.scss
@@ -39,13 +39,13 @@
 	}
 }
 
-:host([layout='filled']) {
+:host([layout=filled]) {
 	.mdc-icon-button:disabled {
 		background-color: var(#{scheme-variables.$vvd-color-neutral-30});
 	}
 }
 
-:host([layout='outlined']) {
+:host([layout=outlined]) {
 	.mdc-icon-button:disabled {
 		border-color: var(#{vvd-formfield.$formfield-disabled-ink});
 	}
