issue #744: fixing CR remarks

--- a/common/foundation/scss/mixins/_layout-mixins.scss
+++ b/common/foundation/scss/mixins/_layout-mixins.scss
@@ -1,5 +1,5 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
-@use './color-connotation' as color-connotaion;
+@use './color-connotation' as color-connotation;
 @use '../functions' as functions;
 
 // override to apply relevance
