--- a/components/list/src/vwc-list-item.scss
+++ b/components/list/src/vwc-list-item.scss
@@ -22,7 +22,7 @@ $vvd-list-item-graphic-margin: --vvd-list-item-graphic-margin;
 	);
 
 	@include typography.typography-cat-shorthand('body-2');
-	@include vvd-formfield.couplings;
+	@include vvd-formfield.coupling;
 
 	height: var(#{$vvd-list-item-block-size});
 
