--- a/components/textfield/src/vwc-textfield.scss
+++ b/components/textfield/src/vwc-textfield.scss
@@ -35,7 +35,7 @@
 		#{vvd-formfield.$formfield-error-fill}
 	);
 
-	@include vvd-formfield.couplings;
+	@include vvd-formfield.coupling;
 
 	min-width: 180px;
 
